--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+* {
+  font-family: "Acme", sans-serif;
+  font-optical-sizing: auto;
+  word-spacing: 8px;
+  /* font-weight: <weight>;
+  font-style: normal; */
+}
+
+
 .grid-container {
   position: relative;
   width: 100%;
@@ -20,5 +29,5 @@
   padding: 1.5rem 3rem;
   border-radius: 0.5rem;
   font-size: 2rem;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
