--- a/src/pages/Expericence/ExperienceCard/ExperienceCard.scss
+++ b/src/pages/Expericence/ExperienceCard/ExperienceCard.scss
@@ -27,6 +27,23 @@
   }
 }
 
+.timeline-duration {
+  position: absolute;
+  left: -14.5rem;
+  top: 7rem;
+  // width: 2rem;
+  height: 2rem;
+  transition: all 0.6s cubic-bezier(0.65, 0, 0.35, 1);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .active &::after {
+    opacity: 1;
+  }
+}
+
 .timeline-content {
   display: flex;
   flex-direction: column;
@@ -96,17 +113,6 @@
     span {
       color: #3b82f6;
     }
-  }
-
-  .duration {
-    display: inline-block;
-    background: #e0f2fe;
-    color: #0369a1;
-    padding: 0.25rem 0.75rem;
-    border-radius: 9999px;
-    font-size: 0.875rem;
-    margin-bottom: 1rem;
-
   }
 
   p {
