--- a/src/pages/Expericence/ExperienceCard/ExperienceCard.scss
+++ b/src/pages/Expericence/ExperienceCard/ExperienceCard.scss
@@ -29,13 +29,14 @@
 
 .timeline-duration {
   position: absolute;
-  left: -14.5rem;
+  left: -8.5rem;
   top: 7rem;
   // width: 2rem;
   height: 2rem;
   transition: all 0.6s cubic-bezier(0.65, 0, 0.35, 1);
   z-index: 1;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
@@ -97,6 +98,34 @@
 
   &:not(:has(img))::before {
     content: attr(data-alt);
+  }
+}
+
+.timeline-image2 {
+  flex-shrink: 0;
+  width: 100%;
+  height: 200px;
+  border-radius: 0.75rem;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media (min-width: 768px) {
+    width: 300px;
+    height: 180px;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+
+    .active & {
+      transform: scale(1.03);
+    }
   }
 }
 
